--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Turret+Road&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Sofia');
 @import url('https://fonts.googleapis.com/css?family=Exo');
 @import url('https://fonts.googleapis.com/css?family=Macondo+Swash+Caps');
@@ -19,9 +19,9 @@ body {
 .main-bar{
    background-color:white;
    width:100%;
-   height:50px;
+   height:60px;
    margin:0 0 1% 0;
-   font-size:30px;
+   font-size:35px;
    display: flex;
    justify-content:space-around;
    align-items: center;
@@ -180,7 +180,7 @@ a{
 
 .social a {
     color:#00aeff;
-    font-size:50px;
+    font-size:40px;
 }
 
 
@@ -239,70 +239,51 @@ ul,li li,p{
 /*animated h1*/
 
 
+h1 {
+  font-size: calc(20px + 5vh);
+  line-height: calc(20px + 5vh);
+  text-shadow: 0 0 5px #00d0ff, 0 0 15px #00d0ff, 0 0 20px #00d0ff, 0 0 40px #00d0ff, 0 0 60px #00d0ff, 0 0 10px #00d0ff, 0 0 98px #00d0ff;
+  color: #a7fcfa;
+  font-family: 'Turret Road', cursive;
+  text-align: center;
+  animation: blink 3s infinite;
+}
 
+.namesection {
+  margin-bottom:2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:40%;
+  background: #222;
+  background-image: repeating-linear-gradient(
+    to bottom,
+    transparent 7px,
+    rgba(0, 0, 0, 0.8) 9px,
+    rgba(0, 0, 0, 0.8) 13px,
+    transparent 13px
+  );
+}
 
-@keyframes text-flicker {
-  0% {
-    opacity: 0.1;
+@-webkit-keyframes blink {
+  20%,
+  24%,
+  55% {
+    color: #001866;
+    text-shadow: none;
   }
-  
-  1% {
-    opacity: 0.9;
-  }
-  
-  5% {
-    opacity: 1;
-  }
-  
-  7% {
-    opacity: 0.9;
-  }
-  
-  15% {
-    opacity: 1;
-  }
-  
-  16% {
-    opacity: 1.3;
-  }
-  
-  20% {
-    opacity: 0.9;
-  }
-  
-  22% {
-    opacity: 0.7;
-  }
-  
-  30% {
-    opacity: 0.1;
-  }
-  
-  35% {
-    opacity: 1;
-  }
-  
-  50% {
-    opacity: 0.4;
-  }
-  
-  60% {
-    opacity: 1;
-  }
-  
-  64% {
-    opacity: 1;
-  }
-  
-  70% {
-    opacity: 0.2;
-  }
-  
-  85% {
-    opacity: 0.1;
-  }
-  
+
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
   100% {
-    opacity: 1;
+  text-shadow: 0 0 5px #00d0ff, 0 0 15px #00d0ff, 0 0 20px #00d0ff, 0 0 40px #00d0ff, 0 0 60px #00d0ff, 0 0 10px #00d0ff, 0 0 98px #00d0ff;
+    color: #a8ecff;
   }
 }
+
+
