--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
 
 body {
     width: auto;
-    height: 100%;
+    height: 70%;
     background: white;
-    margin: 0px;
+    margin: 0 auto;
     display: block;
     padding: 0 0 0 0;
 }
