--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ body {
     background-color: white;
     width: 100%;
     height: 60px;
-    margin: 0 0 1% 0;
+    margin: 1% 0 0 0;
     font-size: 35px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     align-content: space-between;
-    position: sticky;
+    position:sticky;
     top: 0;
     z-index: 5;
 }
@@ -287,6 +287,26 @@ h1 {
     
   }
     
+    
+.main-bar {
+    background-color: white;
+    width: 100%;
+    height: 60px;
+    margin: 1% 0 0 0;
+    font-size: 35px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-between;
+    position:fixed;
+    bottom: 0;
+    z-index: 5;
+}
+ 
+footer{
+  margin:0 0 25% 0;      
+    }
+    
    section{
         padding:2%;
     }
@@ -322,6 +342,8 @@ h1 {
 .img-service{
      margin:1% auto;   
     }
+    
+    
     
 }
 
