--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
 }
 
 .main-bar {
-    background-color: white;
+    background-color:white;
     width: 100%;
     height: 60px;
-    margin: 1% 0 0 0;
+    margin: 0 auto;
     font-size: 35px;
     display: flex;
     justify-content: space-around;
@@ -30,7 +30,6 @@ body {
     top: 0;
     z-index: 5;
 }
-
 .fa-store-alt {
     color: #00aeff;
 
@@ -280,7 +279,7 @@ h1 {
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 620px) {
   body {
     width: 100%;
     height: auto;
@@ -288,23 +287,9 @@ h1 {
   }
     
     
-.main-bar {
-    background-color: white;
-    width: 100%;
-    height: 60px;
-    margin: 1% 0 0 0;
-    font-size: 35px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: space-between;
-    position:fixed;
-    bottom: 0;
-    z-index: 5;
-}
  
 footer{
-  margin:0 0 25% 0;      
+  margin:0 0 30% 0;      
     }
     
    section{
