--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap');
 
 body {
     width: 70%;
@@ -17,6 +18,7 @@ h1 {
     line-height: calc(10px + 5vh);
     text-shadow: 0 0 5px #00d0ff, 0 0 15px #00d0ff, 0 0 20px #00d0ff, 0 0 40px #00d0ff, 0 0 60px #00d0ff, 0 0 10px #00d0ff, 0 0 98px #00d0ff;
     color: #a7fcfa;
+    font-family: 'Odibee Sans', cursive;
     text-align: center;
     animation: blink 3s infinite;
 }
