--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h1 {
 }
 
 .bloc .fas , .bloc .fab ,.bloc .far{
-    color: #002536;
+    color: white;
     font-size: 3vh;
     padding-right: 1%;
 
