--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@
     background: #00aeff ; 
   }
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 body {
     width: 70%;
@@ -73,16 +75,19 @@ h1 {
 .main-bar {
     background-color:white;
     width: 100%;
-    height: 60px;
+    height: 8%;
     margin: 0 auto;
-    font-size: 35px;
+    left:0;
+    right:0;
+    font-size: 4vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
     align-content: space-between;
-    position:sticky;
-    top: 0;
+    position: fixed;
+    bottom: 0;
     z-index: 5;
+    border-top: thistle 1px solid;
 }
 .fa-home {
     color: #00aeff;
@@ -330,23 +335,9 @@ p {
     width: 100%;
     height: auto;
     
-  }
-    
-  .main-bar {
-    background-color:white;
-    width: 100%;
-    height: 60px;
-    margin: 0 auto;
-    font-size: 35px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: space-between;
-    position: fixed;
-    bottom: 1%;
-    z-index: 5;
-}
+  }    
  
+
 footer{
   margin:0 0 30% 0;      
     }
@@ -387,12 +378,11 @@ footer{
      margin:1% auto;   
     }
     
-    
+
 
 }
 
-
-@-webkit-keyframes blink {
+@keyframes blink {
 
     20%,
     24%,
