--- a/style.css
+++ b/style.css
@@ -259,7 +259,12 @@ a {
     color: aqua;
 }
 
+iframe{
+    border-top: oldlace 1px solid;
+    border-bottom: oldlace 1px solid;
+    margin: 5% 0;
 
+}
 footer {
     margin: 5% 0 20% 0;
     background: white;
@@ -339,7 +344,13 @@ p {
     
   }    
  
-
+  iframe{
+      border-top: oldlace 1px solid;
+      border-bottom: oldlace 1px solid;
+      margin: 5% 0;
+      width: 100%;
+      height:300px;
+  }
 footer{
   margin:0 0 30% 0;      
     }
