--- a/style.css
+++ b/style.css
@@ -74,21 +74,23 @@ h1 {
 
 }
 .main-bar {
+    opacity:0.8;
     background-color:white;
-    width: 100%;
-    height: 8%;
-    margin: 0 auto;
-    left:0;
-    right:0;
+    width: 5%;
+    height: 40%;
+    margin: 2%;
     font-size: 4vh;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     align-content: space-between;
     position: fixed;
+    right: 0;
     bottom: 0;
     z-index: 5;
-    border-top: thistle 1px solid;
+    border: paleturquoise solid 5px;
+    border-radius: 25px;
 }
 .fa-home {
     color: #00aeff;
@@ -351,6 +353,7 @@ p {
   body {
     width: 100%;
     height: auto;
+    position: relative;
     
   }    
  
@@ -361,6 +364,27 @@ p {
       width: 100%;
       height:300px;
   }
+
+  .main-bar {
+    opacity:0.8;
+    background-color:white;
+    width: 11%;
+    height: 30%;
+    margin: 1%;
+    font-size: 4vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-between;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+    border: paleturquoise solid 2px;
+    border-radius: 25px;
+}
+
 footer{
   margin:0 0 30% 0;      
     }
