--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap');
 
 
@@ -38,7 +39,7 @@ body {
     margin: 0 auto;
     display: block;
     padding: 0 0 0 0;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     font-weight: 100;
 }
 
@@ -277,12 +278,12 @@ a {
     color: aqua;
 }
 
-iframe{
-    border-top: oldlace 1px solid;
-    border-bottom: oldlace 1px solid;
-    margin: 5% 0;
-
+video{
+    outline: none;
+    margin:0 2%;
+    padding: 2%;
 }
+
 footer {
     margin: 5% 0 20% 0;
     background: white;
