--- a/style.css
+++ b/style.css
@@ -279,8 +279,9 @@ a {
 }
 
 video{
+    width:95%;
     outline: none;
-    margin:0 2%;
+    margin:0 auto;
     padding: 2%;
 }
 
@@ -359,13 +360,6 @@ p {
     
   }    
  
-  iframe{
-      border-top: oldlace 1px solid;
-      border-bottom: oldlace 1px solid;
-      margin: 5% 0;
-      width: 100%;
-      height:300px;
-  }
 
   .main-bar {
     opacity:0.8;
