--- a/style.css
+++ b/style.css
@@ -46,18 +46,33 @@ body {
 
 h1 {
     padding: 3%;
-    font-size: calc(10px + 5vh);
-    line-height: calc(10px + 5vh);
-    text-shadow: 0 0 2px #00d0ff, 0 0 5px #00d0ff, 0 0 10px #00d0ff, 0 0 20px #00d0ff, 0 0 30px #00d0ff, 0 0 5px #00d0ff, 0 0 49px #00d0ff;
-    color: #a7fcfa;
+    font-size:7vh;
+    line-height: 7vh;
     font-family: 'Odibee Sans', cursive;
     text-align: center;
-    animation: blink 3s infinite;
+    animation: blink 5s infinite;
 }
 
 .vbg{
     width: 96%;
     height: auto;
+}
+
+
+
+.namesection {
+    padding: 10%;
+    margin-bottom: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    background: rgb(0, 0, 0);
+    background-image: repeating-linear-gradient(to bottom right,
+            transparent 7px,
+            rgba(255, 255, 255, 0.8) 0.5px,
+            rgb(0, 15, 26) 1px,
+            transparent 10px);
 }
 
 
@@ -106,7 +121,9 @@ h1 {
 
 }
 
-.main-bar a .fa-home:hover,
+
+.main-bar a 
+.fa-home:hover,
 .fa-icons:hover,
 .fa-user-circle:hover {
     color: #002357;
@@ -122,7 +139,7 @@ h1 {
 }
 
 .bloc .fas , .bloc .fab ,.bloc .far{
-    color: white;
+    color: #002357;
     font-size: 3vh;
     padding-right: 1%;
 
@@ -333,22 +350,6 @@ p {
 
 
 
-.namesection {
-    padding: 3%;
-    margin-bottom: 2%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40%;
-    background: #222;
-    background-image: repeating-linear-gradient(to bottom,
-            transparent 7px,
-            rgba(0, 0, 0, 0.8) 9px,
-            rgba(0, 0, 0, 0.8) 13px,
-            transparent 13px);
-}
-
-
 @keyframes blink {
 
     20%,
@@ -366,7 +367,7 @@ p {
     54%,
     56%,
     100% {
-        text-shadow: 0 0 2px  #00d0ff, 0 0 5px  #001866, 0 0 10px #00d0ff, 0 0 20px  #001866, 0 0 30px #00d0ff, 0 0 5px  #001866, 0 0 49px #00d0ff;
+        text-shadow:0 0 30px #ffffff,1px 0px 30px #006eff;
         color: white;
     }
 }
