--- a/responsive.css
+++ b/responsive.css
@@ -28,7 +28,7 @@
     left: 0;
     bottom: 0;
     z-index: 5;
-    border:black solid 2px;
+    border: whitesmoke solid 2px;
     border-radius: 15px;
     }
 
