--- a/responsive.css
+++ b/responsive.css
@@ -16,7 +16,7 @@
     opacity:1;
     width: auto;
     height: 7%;
-    margin:1% 1%;
+    margin:0 1%;
     font-size: 4vh;
     display: flex;
     flex-direction: row;
@@ -29,7 +29,7 @@
     bottom: 0;
     z-index: 5;
     border: whitesmoke solid 2px;
-    border-radius: 15px;
+    border-radius: 10px;
     }
 
     footer{
