--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ h1 {
 /*fini ici*/
 
 .btn {
-    margin: 3% 0 0 0;
+    margin: 3% auto;
     bottom: 0;
     background: #00aeff;
     color: aliceblue;
@@ -202,7 +202,7 @@ h1 {
     text-align: center;
     padding: 0.7% 1.5% 0.7% 1.5%;
     border-radius: 5px;
-    width: 70%;
+    width: 80%;
     height: auto;
     text-align: center;
     font-size: 1.8vh;
