--- a/responsive.css
+++ b/responsive.css
@@ -16,7 +16,7 @@
     opacity:1;
     width: auto;
     height: 7%;
-    margin:0 1%;
+    margin:0 auto;
     font-size: 4vh;
     display: flex;
     flex-direction: row;
@@ -28,8 +28,8 @@
     left: 0;
     bottom: 0;
     z-index: 5;
-    border: whitesmoke solid 2px;
-    border-radius: 10px;
+    border-top: whitesmoke solid 2px;
+    border-radius: 2px;
     }
 
     footer{
