--- a/style.css
+++ b/style.css
@@ -80,6 +80,12 @@ h1 {
 }
 
 
+.getonplay{
+    width:30%;
+    height:auto;
+    margin: 1%;
+}
+
 .pot {
     width: 30%;
     margin: 0 auto 0 0 ;
