--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ h1 {
     margin:1%;
 }
 
+
 .pot {
     width: 30%;
     margin: 0 auto 0 0 ;
@@ -198,6 +199,10 @@ h1 {
     border-left: 1px solid grey;
     animation: slide 0.8s;
     animation-timing-function: linear;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
 }
 
 /*fini ici*/
